--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -52,7 +52,7 @@
   top: 2px;
   padding: 5px 20px;
   background: #000000 !important;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 35px;
   letter-spacing: 0.25px;
@@ -93,7 +93,7 @@
   font-size: 14px;
   background-color: #000000;
   font-weight: 300;
-  color: rgba(163, 163, 163, 0.568627451);
+  color: #c7c3c3;
   border-radius: 16px !important;
   padding: 0px 20px 20px;
 }
