--- a/assets/css/sass/faq.scss
+++ b/assets/css/sass/faq.scss
@@ -41,7 +41,7 @@
         top: 2px;
         padding: 5px 20px;
         background: $black !important;
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 400;
         line-height: 35px;
         letter-spacing: 0.25px;
@@ -81,7 +81,7 @@
         font-size: 14px;
         background-color: $black;
         font-weight: 300;
-        color: #a3a3a391;
+        color: #c7c3c3;
         border-radius: 16px !important;
         padding: 0px 20px 20px;
       }
