--- a/assets/css/sass/features.scss
+++ b/assets/css/sass/features.scss
@@ -290,6 +290,11 @@
                         // min-height: 480px;
                         padding: 0px 50px;
                         position: relative;
+                        transform: perspective(600px) rotateY(0deg);
+                        transition: all ease-in-out 0.6s;
+                        &:hover {
+                          transform: perspective(600px) rotateY(5deg);
+                        }
                         @media screen and (max-width: 767px) {
                           width:100%;
                           //  padding:0px 80px;
