--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -25,7 +25,7 @@
         }
         
         p{
-            color: #5c5c5c;
+            color: #c7c3c3;
             padding: 20px 0px 10px;
             font-weight: 400;
             font-size: 14px;
@@ -34,7 +34,7 @@
             }
         }
         a{
-            color: #5c5c5c;
+            color: #c7c3c3;
             text-decoration: none;
             padding-top: 10px;
             font-size: 14px;
@@ -61,7 +61,7 @@
         padding-left:20px;
     }
     h5{
-        color: #5c5c5c;
+        color: #c7c3c3;
         font-size: 22px;
         line-height: 24px;
         font-weight: 500;
@@ -82,7 +82,7 @@
             padding: 0px;
           }
         a{
-            color: #5c5c5c;
+            color: #c7c3c3;
             font-size: 14px;
             font-weight: 400;
             line-height: 22px;
@@ -100,7 +100,7 @@
         padding: 60px 0px;
         align-items: center;
         .copy_rights_1{
-            color: #5c5c5c;
+            color: #c7c3c3;
             p{
                 margin: 0;
                 font-size: 14px;
