--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -38,7 +38,7 @@
   fill: #3eab90;
 }
 .footer_section .col-lg-4 p {
-  color: #c7c3c3;
+  color: #5c5c5c;
   padding: 20px 0px 10px;
   font-weight: 400;
   font-size: 14px;
@@ -49,7 +49,7 @@
   }
 }
 .footer_section .col-lg-4 a {
-  color: #c7c3c3;
+  color: #5c5c5c;
   text-decoration: none;
   padding-top: 10px;
   font-size: 14px;
@@ -74,7 +74,7 @@
   padding-left: 20px;
 }
 .footer_section h5 {
-  color: #c7c3c3;
+  color: #5c5c5c;
   font-size: 22px;
   line-height: 24px;
   font-weight: 500;
@@ -100,7 +100,7 @@
   }
 }
 .footer_section li a {
-  color: #c7c3c3;
+  color: #5c5c5c;
   font-size: 14px;
   font-weight: 400;
   line-height: 22px;
@@ -118,7 +118,7 @@
   align-items: center;
 }
 .footer_section .copy_rights .copy_rights_1 {
-  color: #c7c3c3;
+  color: #5c5c5c;
 }
 .footer_section .copy_rights .copy_rights_1 p {
   margin: 0;
