--- a/assets/css/sass/BankZor.scss
+++ b/assets/css/sass/BankZor.scss
@@ -65,6 +65,7 @@
         align-items: center;
         margin-right: 25px;
         min-width: 43px;
+        animation: ripple 0.7s linear infinite;
       }
     }
     .fz_btn {
@@ -81,57 +82,13 @@
         justify-content: center;
       }
       .fz_learmore {
-        @include primaryBg;
-        padding: 15px 20px;
-        border: 1px solid transparent;
-        margin-right: 35px;
-        font-weight: 400;
-        transition: all 0.5s ease-in;
-        width: 180px;
-        &:hover {
-          background: transparent;
-          border: 1px solid $primary-color;
-        }
-        .hero-join {
-          @include hero-join;
-        }
-        &:hover {
-          .hero-join {
-            bottom: 12px;
-          }
-        }
-
-        @media screen and (max-width: 1300px) {
-          padding: 13px 20px;
-          font-size: 14px; 
-          margin-right: 24px;
-        }
+        @include btn-effect;
+        @include  active_btn;
       }
       .fz_learmore_btn {
-        @include primaryBg($theme: $black, $white-color: $primary-color);
-        padding: 15px 20px;
-        font-weight: 400;
-        border: 1px solid $primary-color;
-        transition: all 0.3s ease-in;
-        width: 180px;
-        &:hover {
-          background: $primary-color;
-          border: 1px solid transparent;
-          color: $white;
-        }
-        .hero-join {
-          @include hero-join;
-        }
-        &:hover {
-          .hero-join {
-            bottom: 12px;
-          }
-        }
-
-        @media screen and (max-width: 1300px) {
-          padding: 13px 20px;
-          font-size: 14px;
-        }
+        @include btn-effect;
+        margin-left: 20px;
+        
       }
     }
   }
