--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -195,7 +195,7 @@
   border-radius: 32px;
   background-color: transparent;
   outline: none;
-  border: 1px solid #fff;
+  border: 1px solid #309393;
   font-size: 16px;
   color: #fff;
   display: flex;
@@ -274,7 +274,7 @@
   border-radius: 32px;
   background-color: transparent;
   outline: none;
-  border: 1px solid #fff;
+  border: 1px solid #309393;
   font-size: 16px;
   color: #fff;
   display: flex;
