--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -30,7 +30,7 @@
   display: flex;
   height: 100vh;
 }
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 992px) {
   .fz_product_sec .container .fz_product_left .fz_sub_container {
     height: auto;
     flex-direction: column;
@@ -42,6 +42,11 @@
   width: 620px;
 }
 @media only screen and (max-width: 1200px) {
+  .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content {
+    width: 400px;
+  }
+}
+@media only screen and (max-width: 992px) {
   .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content {
     width: 100%;
   }
@@ -171,7 +176,7 @@
 .fz_product_sec .container .fz_product_left .fz_img {
   display: none;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 992px) {
   .fz_product_sec .container .fz_product_left .fz_img {
     display: block;
   }
@@ -186,7 +191,7 @@
     padding-top: 110px !important;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 992px) {
   .fz_product_sec .container .fz_product_right {
     display: none;
   }
@@ -196,19 +201,13 @@
   height: 525px;
   position: relative;
 }
-@media screen and (max-width: 1400px) {
-  .fz_product_sec .container .fz_product_right .fz_product_images {
-    width: 450px;
-    height: 450px;
-  }
-}
 .fz_product_sec .container .fz_product_right .fz_product_images .fz_product_image {
   position: absolute;
   width: 100%;
   height: 100%;
   box-shadow: #0c83e7;
 }
-.fz_product_sec .container .fz_product_right .fz_product_images .fz_product_image video {
+.fz_product_sec .container .fz_product_right .fz_product_images .fz_product_image svg {
   width: 100%;
   height: 100%;
 }
