--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -16,7 +16,7 @@
       .fz_sub_container {
         display: flex;
         height: 100vh;
-        @media only screen and (max-width: 1200px) {
+        @media only screen and (max-width: 992px) {
           height: auto;
           flex-direction: column;
           gap: 24px;
@@ -26,6 +26,9 @@
           width: 620px;
 
           @media only screen and (max-width: 1200px) {
+            width: 400px;
+          }
+          @media only screen and (max-width: 992px) {
             width: 100%;
           }
           .fz_num {
@@ -146,7 +149,7 @@
       .fz_img {
         display: none;
 
-        @media screen and (max-width: 1200px) {
+        @media screen and (max-width: 992px) {
           display: block;
         }
       }
@@ -161,7 +164,7 @@
           padding-top: 110px!important;
 
       }
-      @media screen and (max-width: 1200px) {
+      @media screen and (max-width: 992px) {
         display: none;
       }
 
@@ -169,17 +172,13 @@
         width: 525px;
         height: 525px;
         position: relative;
-        @media screen and (max-width: 1400px) {
-          width: 450px;
-          height: 450px;
-        }
         .fz_product_image {
           position: absolute;
           width: 100%;
           height: 100%;
           box-shadow: #0c83e7;
 
-          video {
+          svg {
             width: 100%;
             height: 100%;
           }
